re PR lto/68811 (ICE: in get, at cgraph.h:1218)

PR lto/68811
	* g++.dg/lto/pr68811_0.C: New testcase.
	* g++.dg/lto/pr68811_1.C: New testcase.

	* lto-symtab.c (lto_symtab_merge_decls_2): Decl can never be prevailed
	by itself.

From-SVN: r231473